Added firebase id’s to restaurants, dishes, blogs. Added separate lat/long as decimal fields and __str__ definitions. Wrote messy version of load_restaurants command. would be useful to generalise.

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,9 +1,9 @@
 {% extends "admin/base.html" %}
 
-{% block title %}{{ title }} | {{ site_title|default:_('Site Admin') }}{% endblock %}
+{% block title %}{{ title }} | {{ site_title|default:_('Feedmee Admin') }}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">Site Admin</a></h1>
+<h1 id="site-name"><a href="{% url 'admin:index' %}">Feedmee Admin</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
