Remove text from deep link template.

--- a/webapp/templates/deeplink_dish.html
+++ b/webapp/templates/deeplink_dish.html
@@ -26,10 +26,5 @@
       </script>
     {% endif %}
   </head>
-  <body>
-    Deeplink All Conditions Met: {{deeplink.all_conditions_met}}<br>
-    Deeplink Available: {{deeplink.has_deeplink}}<br>
-    Path: {{deeplink.path}}<br>
-    Useragent is target: {{deeplink.useragent_is_target}}
-  </body>
+  <body></body>
 </html>
