--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -22,26 +22,89 @@
           <th>1 - 19 Swipes</th>
           <th>0 Swipes</th>
         </thead>
-        <tbody>
-          <tr>
-            <td>{{s100}}</td>
-            <td>{{s50}}</td>
-            <td>{{s20}}</td>
-            <td>{{s1}}</td>
-            <td>{{s0}}</td>
-          </tr>
-          <tr>
-            <td>{{p100}}%</td>
-            <td>{{p50}}%</td>
-            <td>{{p20}}%</td>
-            <td>{{p1}}%</td>
-            <td>{{p0}}%</td>
-          </tr>
+        <tbody id='swipes-body'>
+
         </tbody>
       </table>
     </div>
   </div>
+  <div class="row">
+    <div class="col-sm-12 text-center">
+      <h2><small>Total Users</small></h2>
+      <h2 id='total-users'></h2>
+    </div>
+  </div>
+  <br><br><br>
+  <div class="row">
+    <div class="col-sm-12">
+      <h2>Last 24 Hours Only</h2>
+    </div>
+  </div>
+  <br><bR>
+  <div class="row">
+    <div class="col-sm-12">
+      <table class="table table-striped table-bordered table-rounded">
+        <thead>
+          <th>Over 100 Swipes</th>
+          <th>50 - 99 Swipes</th>
+          <th>20 - 49 Swipes</th>
+          <th>1 - 19 Swipes</th>
+          <th>0 Swipes</th>
+        </thead>
+        <tbody id='swipes-body-new'>
 
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4 text-center">
+      <h2><small>New Users</small></h2>
+      <h2 id='new-users'></h2>
+    </div>
+    <div class="col-sm-4 text-center">
+      <h2><small>New Queries</small></h2>
+      <h2 id='new-queries'></h2>
+    </div>
+    <div class="col-sm-4 text-center">
+      <h2><small>New swipes</small></h2>
+      <h2 id='new-swipes'></h2>
+    </div>
+  </div>
 </div>
-
+<script>
+function get_users() {
+  $.getJSON('/api/reporting/users/', function (data) {
+    $('#total-users').text(data.users)
+  })
+}
+function get_engagement(endpoint, target, callback) {
+  $.getJSON('/api/reporting/'+endpoint+'/', function (data) {
+    var first_row = '<tr>';
+    var second_row = '<tr>';
+    for (var i=0; i<data.swipes.count.length; i++) {
+      first_row += '<td>' + data.swipes.count[i] + '</td>';
+      second_row += '<td>' + data.swipes.percent[i] + '%</td>';
+    }
+    first_row += '</tr>';
+    second_row += '</tr>';
+    $(target).html(first_row+second_row)
+    if (typeof callback === 'function') callback(data)
+  })
+}
+function get_recent() {
+  get_engagement('recent', '#swipes-body-new', function (data) {
+    $('#new-users').text(data.new_users)
+    $('#new-queries').text(data.new_queries)
+    $('#new-swipes').text(data.new_swipes)
+  })
+}
+$(document).ready(function () {
+  get_engagement('engagement', '#swipes-body');
+  get_recent()
+  get_users()
+  setInterval(get_users, 15000)
+  setInterval(get_recent, 300000)
+})
+</script>
 {% endblock %}
