Data entry form layout. Navigation. Still needs new geocoding sequence for restaurant. None of the forms save yet.

--- a/data_entry/static/css/demain.css
+++ b/data_entry/static/css/demain.css
@@ -4,3 +4,11 @@ footer {
   background: #aab;
   color: #F1f1f1;
 }
+.bfw {
+  width: 100% !important;
+  margin-bottom: 15px !important;
+}
+.bfw .item-list,
+.bfw input.item-filter {
+  font-size: 1em !important;
+}
