Add/Change dishes/recipes/restaurants/blogs.

--- a/data_entry/templates/de_dishes_list.html
+++ b/data_entry/templates/de_dishes_list.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load bootstrap3 %}
 {% block 'content'%}
+<h2>All Recipes</h2>
 <table class="table table-striped table-bordered table-rounded">
   <thead>
     <th>Dish</th>
