--- a/data_entry/static/css/demain.css
+++ b/data_entry/static/css/demain.css
@@ -1,7 +1,7 @@
 footer {
   margin-top: 100px;
   padding: 50px;
-  background: #aab;
+  background: #abc;
   color: #F1f1f1;
 }
 .bfw {
@@ -11,4 +11,85 @@ footer {
 .bfw .item-list,
 .bfw input.item-filter {
   font-size: 1em !important;
+}
+.logs-dropdown h3 {
+  font-size: 14px !important;
+  color: #fff;
+}
+.logs-dropdown {
+  padding: 10px 0 0 10px;
+  width: 450px;
+  background-color: #abc;
+  border-radius: 4px;
+  overflow: hidden;
+  border: 1px solid #abc;
+}
+.logs-dropdown > .external {
+
+}
+.logs-dropdown-list {
+  height: 250px !important;
+  overflow-y: scroll !important;
+  background-color: #fff;
+  margin-left: -10px;
+}
+.logs-dropdown-list > li {
+  padding: 10px 10px 5px 10px;
+  border-bottom: 2px solid #abc;
+  min-height: 52px;
+  position: relative;
+}
+.logs-dropdown-list > li > .details {
+  width: 260px;
+  display: inline-block;
+}
+.logs-dropdown-list > li > .user {
+  position: absolute;
+  bottom: 5px;
+  right:10px;
+}
+.label-icon {
+  border-radius: 20px;
+  width: 32px;
+  height: 32px;
+  padding: 5px;
+  margin-right: 5px;
+  font-size: 18px;
+  display: inline-block;
+  line-height: 22px;
+}
+.navbar-default {
+  box-shadow: 1px 1px 2px rgba(240, 240,255,0.8);
+  background: #FFF;
+  border:none;
+}
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
+  background-color: #f2f4f8;
+}
+.label-default {
+  background-color: #abc;
+}
+.breadcrumb {
+  background-color: #FFF;
+  border-bottom: 1px solid #eff2f5;
+  border-radius: 0;
+  padding: 2px 8px;
+}
+.breadcrumb>.active {
+    color: #737a82;
+}
+.breadcrumb>li+li:before {
+    padding: 0 5px;
+    color: #abc;
+    content: "/\00a0";
+}
+.nav-tabs {
+    border-bottom: 1px solid #eff2f5;
+}
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+  border: 1px solid #eff2f5;
+  border-bottom-color: transparent;
+}
+body {
+  color: #134;
 }
