--- a/data_entry/templates/de_base.html
+++ b/data_entry/templates/de_base.html
@@ -18,6 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="{% static 'js/demain.js' %}"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="{% static 'css/demain.css' %}" />
     <link rel="stylesheet" href="{% static 'css/webmain.css' %}" />
   </head>
@@ -38,6 +39,12 @@
             <li><a href="/data-entry/restaurants/">Restaurants</a></li>
             <li><a href="/data-entry/recipes/">Recipes</a></li>
             <li><a href="/data-entry/dishes/">Dishes</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Logs ({{logCount}}) <span class="caret"></span></a>
+              {% include 'item_logs.html' %}
+            </li>
           </ul>
         </div>
       </div>
