--- a/data_entry/templates/de_recipes_list.html
+++ b/data_entry/templates/de_recipes_list.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load bootstrap3 %}
 {% block 'content'%}
+<a href="/data-entry/recipes/add/" class="btn btn-default btn-sm pull-right">Add New Recipe</a>
+<h2>All Recipes</h2>
 <table class="table table-striped table-bordered table-rounded">
   <thead>
     <th>Recipe</th>
@@ -17,6 +19,6 @@
   </tbody>
 </table>
 
-{% include 'simple-pagination.html' with collection=dishes %}
+{% include 'simple-pagination.html' with collection=recipes %}
 
 {%endblock%}
