--- a/data_entry/templates/de_restaurants_list.html
+++ b/data_entry/templates/de_restaurants_list.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load bootstrap3 %}
 {% block 'content'%}
+<a href="/data-entry/restaurants/add/" class="btn btn-default btn-sm pull-right">Add New Restaurant</a>
+<h2>All Restaurants</h2>
 <table class="table table-striped table-bordered table-rounded">
   <thead>
     <th>Restaurant</th>
