--- a/data_entry/templates/simple-pagination.html
+++ b/data_entry/templates/simple-pagination.html
@@ -1,22 +1,24 @@
 <div class="pagination text-center center-block">
   <span class="step-links">
-    <ul class="list-inline text-center">
-      {% if collection.has_previous %}
-        <li><a href="?page={{ collection.previous_page_number }}"><</a></li>
+    <ul class="pagination">
+      {% if collection.has_previous is False %}
+        <li class="disabled"><a href="#">&laquo;</a></li>
+      {% else %}
+        <li><a href="?page={{ collection.previous_page_number }}">&laquo;</a></li>
       {% endif %}
       {% for pg in collection.paginator.page_range %}
         {% if pg == collection.number %}
-          <li>{{pg}}</li>
+          <li class="active"><a href="?page={{pg}}">{{pg}}</a></li>
         {% else %}
           <li><a href="?page={{pg}}">{{pg}}</a></li>
         {% endif %}
       {% endfor %}
-      {% if collection.has_next %}
-          <li><a href="?page={{ collection.next_page_number }}">></a></li>
+      {% if collection.has_next is False %}
+        <li class="disabled"><a href="#">&raquo;</a></li>
+      {% else %}
+        <li><a href="?page={{ collection.next_page_number }}">&raquo;</a></li>
       {% endif %}
     </ul>
-    <span class="current">
-      {{collection | length }} items of {{collection.paginator.count}} total
-    </span>
   </span>
+  <p>{{collection | length }} items of {{collection.paginator.count}} total</p>
 </div>
