--- a/data_entry/templates/de_base.html
+++ b/data_entry/templates/de_base.html
@@ -42,8 +42,8 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Logs ({{logCount}}) <span class="caret"></span></a>
-              {% include 'item_logs.html' %}
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Logs ({{logs.count}}) <span class="caret"></span></a>
+              {% include 'item_logs.html' with logCount=logs.count%}
             </li>
           </ul>
         </div>
