--- a/data_entry/templates/de_dishes_list.html
+++ b/data_entry/templates/de_dishes_list.html
@@ -2,7 +2,11 @@
 {% load static %}
 {% load bootstrap3 %}
 {% block 'content'%}
-<h2>All Recipes</h2>
+<div class="pull-right mini-paginator">
+  {% bootstrap_pagination dishes pages_to_show='5' size='small' extra='bob' %}
+</div>
+<h2>All Dishes</h2>
+
 <table class="table table-striped table-bordered table-rounded">
   <thead>
     <th>Dish</th>
@@ -18,7 +22,6 @@
     {% endfor %}
   </tbody>
 </table>
-
 {% include 'simple-pagination.html' with collection=dishes %}
 
 {%endblock%}
