--- a/data_entry/templates/de_recipes_list.html
+++ b/data_entry/templates/de_recipes_list.html
@@ -2,7 +2,10 @@
 {% load static %}
 {% load bootstrap3 %}
 {% block 'content'%}
-<a href="/data-entry/recipes/add/" class="btn btn-default btn-sm pull-right">Add New Recipe</a>
+<a href="/data-entry/recipes/add/" class="btn btn-default btn-sm pull-right" style="margin-left: 15px;">Add New Recipe</a>
+<div class="pull-right mini-paginator">
+  {% bootstrap_pagination recipes pages_to_show='5' size='small' extra='bob' %}
+</div>
 <h2>All Recipes</h2>
 <table class="table table-striped table-bordered table-rounded">
   <thead>
