--- a/data_entry/templates/de_restaurants_list.html
+++ b/data_entry/templates/de_restaurants_list.html
@@ -2,7 +2,10 @@
 {% load static %}
 {% load bootstrap3 %}
 {% block 'content'%}
-<a href="/data-entry/restaurants/add/" class="btn btn-default btn-sm pull-right">Add New Restaurant</a>
+<a href="/data-entry/restaurants/add/" class="btn btn-default btn-sm pull-right" style="margin-left:15px;">Add New Restaurant</a>
+<div class="pull-right mini-paginator">
+  {% bootstrap_pagination restaurants pages_to_show='5' size='small' extra='bob' %}
+</div>
 <h2>All Restaurants</h2>
 <table class="table table-striped table-bordered table-rounded">
   <thead>
