--- a/data_entry/templates/de_blogform.html
+++ b/data_entry/templates/de_blogform.html
@@ -6,5 +6,5 @@
   {% bootstrap_field blogform.url placeholder='https://somewebsite.com/' %}
   {% bootstrap_field blogform.image_url %}
   {{blogform.restaurant_id}}
-  {% bootstrap_button "Save" button_type="submit" button_class="btn-primary" %}
+  {% bootstrap_button "SUBMIT" button_type="submit" button_class="btn-success btn-block" %}
 </form>
