--- a/data_entry/templates/de_restaurants_list.html
+++ b/data_entry/templates/de_restaurants_list.html
@@ -7,7 +7,7 @@
   {% bootstrap_pagination restaurants pages_to_show='5' size='small' extra='bob' %}
 </div>
 <h2>All Restaurants</h2>
-<table class="table table-striped table-bordered table-rounded">
+<table class="table table-rounded">
   <thead>
     <th>Restaurant</th>
     <th>Address</th>
