--- a/webapp/templates/blog_card.html
+++ b/webapp/templates/blog_card.html
@@ -8,7 +8,7 @@
       {% if admin %}
         <div class="pull-right">
           <ul class="list-inline">
-            <li><a href="/data-entry/blogs/{{blog.id}}/change/" class="btn btn-primary">
+            <li><a href="/data-entry/blogs/{{blog.id}}/change/" class="btn btn-default">
               Edit</a></li>
             <li><a href="/data-entry/blogs/{{blog.id}}/delete/" class="btn btn-danger">
               Delete</a></li>
