--- a/data_entry/templates/de_dishes_list.html
+++ b/data_entry/templates/de_dishes_list.html
@@ -7,7 +7,7 @@
 </div>
 <h2>All Dishes</h2>
 
-<table class="table table-striped table-bordered table-rounded">
+<table class="table">
   <thead>
     <th>Dish</th>
     <th>Restaurant</th>
