--- a/data_entry/templates/de_recipes_list.html
+++ b/data_entry/templates/de_recipes_list.html
@@ -7,7 +7,7 @@
   {% bootstrap_pagination recipes pages_to_show='5' size='small' extra='bob' %}
 </div>
 <h2>All Recipes</h2>
-<table class="table table-striped table-bordered table-rounded">
+<table class="table table-rounded">
   <thead>
     <th>Recipe</th>
     <th>Description</th>
