--- a/webapp/templates/dish_card.html
+++ b/webapp/templates/dish_card.html
@@ -10,7 +10,7 @@
       {% if admin %}
         <div class="pull-right">
           <ul class="list-inline">
-            <li><a href="/data-entry/dishes/{{dish.id}}/change/" class="btn btn-primary">
+            <li><a href="/data-entry/dishes/{{dish.id}}/change/" class="btn btn-default">
               Edit</a></li>
             <li><a href="/data-entry/dishes/{{dish.id}}/delete/" class="btn btn-danger">
               Delete</a></li>
