--- a/data_entry/templates/de_base.html
+++ b/data_entry/templates/de_base.html
@@ -40,12 +40,14 @@
             <li><a href="/data-entry/recipes/">Recipes</a></li>
             <li><a href="/data-entry/dishes/">Dishes</a></li>
           </ul>
+          {% if logs %}
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Logs ({{logs.count}}) <span class="caret"></span></a>
               {% include 'item_logs.html' with logCount=logs.count%}
             </li>
           </ul>
+          {% endif %}
         </div>
       </div>
     </nav>
