--- a/data_entry/static/css/demain.css
+++ b/data_entry/static/css/demain.css
@@ -12,6 +12,11 @@ footer {
 .bfw input.item-filter {
   font-size: 1em !important;
 }
+.bfw-add-item {
+  position: absolute;
+  left: 450px;
+  top: 45px;
+}
 .logs-dropdown h3 {
   font-size: 14px !important;
   color: #fff;
@@ -134,4 +139,37 @@ h6 .small, h6 small {
 }
 body {
   color: #134;
+}
+#bg-overlay {
+  position: fixed;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.1;
+  z-index: 100;
+}
+#FormModal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  height: 50%;
+  background-color: #FFF;
+  border-radius: 5px;
+  box-shadow: 25px 25px 45px rgba(0,0,0,0.2);
+  z-index: 2000;
+  padding: 15px;
+}
+#FormModal #modal-x {
+  position: relative;
+  top: -3px;
+  font-size: 16px;
+  cursor: pointer;
+  opacity: 0.7;
+}
+#FormModal #modal-x:hover {
+  opacity: 1;
 }
