--- a/data_entry/templates/de_base.html
+++ b/data_entry/templates/de_base.html
@@ -17,7 +17,12 @@
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="{% static 'js/demain.js' %}"></script>
+    <script src="{% static 'js/dataEntry.min.js' %}"></script>
+    <script>
+    $(document).ready(function () {
+      DE.init()
+    })
+    </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="{% static 'css/demain.css' %}" />
     <link rel="stylesheet" href="{% static 'css/webmain.css' %}" />
